<resources>
    <string name="app_name">Paik</string>
    <string name="app_description">Paik is a secure news reader and reporter app featuring group conversations around news.</string>
    <string name="title_activity_main">Paik</string>
    <string name="title_activity_help">Paik</string>
    <string name="title_activity_downloads">Paik</string>
    <string name="title_activity_add_feed">Paik</string>
    <string name="title_activity_post">My Posts</string>
    <string name="title_activity_add_post">Paik</string>
    <string name="title_activity_panic">Paik</string>
    <string name="title_activity_view_media">Paik</string>
    <string name="title_activity_settings">Paik</string>
    <string name="title_activity_lock_screen">Paik</string>
    <string name="title_activity_create_account">Paik</string>
    <string name="title_activity_httpd_app_sender">SHARE APP</string>
    <string name="menu_tag">Search by Tag</string>
    <string name="menu_share">Share</string>
    <string name="menu_panic">Panic</string>
    <string name="menu_add_post">Add post</string>
    <string name="feed_filter_display_photos">Display photos</string>
    <string name="feed_filter_popular">Popular</string>
    <string name="feed_filter_favorites">My Favorites</string>
    <string name="feed_filter_shared_stories">Stories Received</string>
    <string name="feed_filter_all_feeds">All Feeds</string>
    <string name="feed_filter_add_new">Manage Feeds</string>
    <string name="feed_share_popup_title">Share feed via</string>
    <string name="story_list_hint_add_favorite_text1">Make a list of your top stories here by tapping "favorite" in a story</string>
    <string name="story_list_hint_add_favorite_text2">Here are some favorites from fellow readers to hold you over:</string>
    <string name="story_list_hint_no_popular_text1">Stories get popular when comments are shared!</string>
    <string name="story_list_hint_no_popular_text2">These stories have long titles, perhaps they\'re worth talking about:</string>
    <string name="story_list_hint_no_shared_text1">The stories shared with you using Paik’s Secure Share are listed here.</string>
    <string name="story_list_hint_no_shared_text2">To receive a share from a friend, go to the ‘Receive a Share’ screen from the side menu.</string>
    <string name="help_title">About Paik</string>
    <string name="help_tor_title">Go Online with Tor</string>
    <string name="help_tor_content">Tor is an open network that helps keep you safe online. It defends against network surveillance that threatens your personal freedom and privacy. You will use the Orbot app to connect to the Tor network.</string>
    <string name="help_tor_button">Go Online with Tor</string>
    <string name="help_wipe_title">Wipe the App</string>
    <string name="help_wipe_content">Tap the panic button to delete your personal data within Paik. You can set the panic action to delete the entire app in your preferences.</string>
    <string name="help_wipe_button">Test panic button</string>
    <string name="help_share_title">Share locally, without Internet</string>
    <string name="help_share_content">Share stories, feeds and the entire app using the Paik Secure Share. It\'s safe, easy and only requires a friend nearby with Bluetooth. App sharing requires a WiFi network or hotspot.</string>
    <string name="help_chat_title">Join Live Group Discussions</string>
    <string name="help_chat_content">Tap on the conversation bubble in any story to connect to its group discussion. Paik connects via Chat Secure, a separate trusted app, to bring live conversations to your fingertips.</string>
    <string name="help_data_title">Minimize Data Use</string>
    <string name="help_data_content">Tips to reduce your data consumption:\n\n1. Sync only the feeds that matter to you most. Paik allows you to sync individual feeds.\n\n2. Choose Bit Wise syncing mode in your preferences. This syncs only text, with the ability to load photos on a story by story basis.\n\n3. Expire your articles in a timely manner. Choose your time frame in your preferences.</string>
	<string name="about_guardian_title">About Guardian Project</string>
    <string name="about_guardian_content">The Guardian Project creates easy to use apps, open-source software libraries, operating system modifications, and customized mobile devices useful to any person looking to protect their communications and personal data from unjust intrusion and monitoring. Visit us at https://guardianproject.info</string>
    <string name="help_terms_group_title">Terms and Software Licenses</string>
    <string name="help_terms_title">Terms and Software Licenses</string>
    <string name="help_terms_content">User-Submitted Materials\n\nBBG Websites may allow users to post, upload, transmit, or otherwise submit comments, messages, photos, images, story ideas, or other content or materials (collectively “User-Submitted Materials). You acknowledge that User-Submitted Materials may be routed through our servers, the servers of one or more third parties on our behalf, and the Internet. You acknowledge that BBG Websites are for public and not private communications.\n\nYou may only submit materials to BBG Websites for which you have the copyright or other necessary rights and permission to distribute electronically. You may not violate, plagiarize, or infringe on the rights of third parties, including copyright, patent, trademark, trade secret, privacy, personal, publicity, moral or proprietary rights. You agree and represent that you own or have all necessary rights and permissions to use, distribute, and authorize BBG to use and distribute any materials you submit.\n\nYou retain any copyright or other ownership rights you possess in any User-Submitted Materials that you submit on or through BBG Websites. However, by submitting any User-Submitted Materials on or through BBG Websites, you hereby grant BBG a non-exclusive, perpetual, royalty-free, fully paid up, worldwide, transferable license to use, copy, sublicense, modify, transmit, publicly perform, display, create derivative works of, host, index, cache, tag, encode, and/or adapt your User-Submitted Materials in any and all media formats or channels, whether now known or hereafter devised.\n\nAdditional user-submitted material Rules Specific to Posting Comments\n\nBBG will make every effort to review and post comments within 48 hours, although BBG is under no obligation to post comments within any deadline or to post the comments at all. BBG encourages thoughtful discussion and will not censor comments based on ideology or political points of view. BBG will not edit comments - we will either post them or refuse to post them. All comments must follow these rules:\n\n- Stay on topic.\n- No obscenity, profanity, vulgarity, hate language, SHOUTING, or other bad behavior.\n- No personal attacks. No inflammatory language or calls for violence.\n- No advocating or providing instruction on how to conduct any illegal activity\n- No advertising, promotional materials, "junk mail," "spam," "chain letters," "pyramid schemes," or any other form of solicitation\n- Simple text only, no html or other code.</string>
    <string name="help_show_news">Got it. Show me the news!</string>
    <string name="downloads_title">Media Downloads</string>
    <string name="downloads_complete">COMPLETE</string>
    <string name="downloads_in_progress">IN PROGRESS</string>
    <string name="downloads_operation_refresh">REFRESH</string>
    <string name="downloads_operation_cancel">CANCEL</string>
    <string name="story_comment_add_hint">Your comment here</string>
    <string name="pulldown_to_sync_no_net">No Internet. Try again later.</string>
    <string name="pulldown_to_sync">Pull down to re-sync feed</string>
    <string name="release_to_sync">Release to re-sync feed</string>
    <string name="last_synced_never">Never synced</string>
    <string name="last_synced_recently">Synced less than a minute ago</string>
    <string name="last_synced_minute">Synced %1$d minute ago</string>
    <string name="last_synced_hour">Synced %1$d hour ago</string>
    <string name="last_synced_day">Synced %1$d day ago</string>
    <string name="last_synced_minutes">Synced %1$d minutes ago</string>
    <string name="last_synced_hours">Synced %1$d hours ago</string>
    <string name="last_synced_days">Synced %1$d days ago</string>
    <string name="menu_news">News</string>
    <string name="menu_post">My Posts</string>
    <string name="menu_post_new">Create a Post</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_chat">Paik Talk</string>
    <string name="menu_help">About Paik</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_receive_share">Receive a Share</string>
    <string name="menu_tor_connected">Connected to Tor</string>
    <string name="menu_tor_not_connected">Not connected to Tor</string>
    <string name="menu_psiphon_connected">Connected to Psiphon</string>
    <string name="menu_psiphon_not_connected">Not connected to Psiphon</string>
    <string name="menu_num_feeds">%1$d feeds</string>
    <string name="menu_num_stories">%1$d posts</string>
    <string name="menu_num_chats">%1$d chats</string>
    <string name="menu_num_downloads">%1$d items</string>
    <string name="menu_preferences">Preferences</string>
    <string name="story_item_short_author">By %1s</string>
    <string name="story_item_short_published_never"></string>
    <string name="story_item_short_published_recently">Now</string>
    <string name="story_item_short_published_minutes">%1$d m</string>
    <string name="story_item_short_published_minute">%1$d m</string>
    <string name="story_item_short_published_hours">%1$d hr</string>
    <string name="story_item_short_published_hour">%1$d hr</string>
    <string name="story_item_short_published_days">%1$d d</string>
    <string name="story_item_short_published_day">%1$d d</string>
    <string name="story_item_short_tag_results">Showing results for ##%1s##</string>
    <string name="story_item_share_popup_title">Share story via</string>
    <string name="story_item_search_by_tag_hint">Search by #tag</string>
    <string name="story_item_swipe_hint_up">Up to close</string>
    <string name="story_item_swipe_hint_over">Over to read</string>
    <string name="story_item_read_with_orweb">Read full article</string>
    <string name="error_feed_404">Feed was not found</string>
    <string name="error_feed_bad_url">Feed URL is not valid, please visit "manage feeds" to modify or delete it.</string>
    <string name="error_feed_unknown">Error syncing feed, please try again</string>
    <string name="panic_settings">Panic Settings</string>
    <string name="panic_cancel">Cancel</string>
    <string name="panic_hint">Swipe down to delete the app</string>
    <string name="panic_hint_wipe_content">Swipe down to delete personal data</string>
    <string name="panic_test_successful">Good job! In a real scenario, you would have successfully completed a wipe.</string>
    <string name="add_feed_add">Add</string>
    <string name="add_feed_operation_remove">REMOVE</string>
    <string name="add_feed_operation_copy_url">COPY URL</string>
    <string name="add_feed_operation_copy_url_clipboard_label">Feed URL</string>
    <string name="add_feed_operation_cancel">CANCEL</string>
    <string name="add_feed_manual_label">Enter RSS Feed URL:</string>
    <string name="bluetooth_send_title">Choose your friend\'s device:</string>
    <string name="bluetooth_send_info">Your friend must have the Paik app open to the \'Receive a Share\' screen from the side menu.</string>
    <string name="bluetooth_send_scan">Search for more devices&#8230;</string>
    <string name="bluetooth_send_sharing">SHARING&#8230;</string>
    <string name="bluetooth_send_close">CLOSE</string>
    <string name="bluetooth_send_success_1_story">Success! 1 story shared.</string>
</resources>