<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_account" android:title="@string/account_title" android:orderInCategory="111" app:showAsAction="never" android:icon="@drawable/ic_menu_downloads"/>
    <item android:id="@+id/menu_media_downloads" android:title="@string/downloads_title" android:orderInCategory="111" app:showAsAction="never" android:icon="@drawable/ic_menu_downloads"/>
    <item android:id="@+id/menu_media_uploads" android:title="@string/upload_title" android:orderInCategory="111" app:showAsAction="never" android:icon="@drawable/ic_menu_downloads"/>
    <item android:id="@+id/menu_manage_feeds" android:title="@string/feed_filter_add_new" android:orderInCategory="112" app:showAsAction="never" android:icon="@drawable/ic_action_add_feed"/>
    <item android:id="@+id/menu_preferences" android:title="@string/menu_preferences" android:orderInCategory="113" app:showAsAction="never" android:icon="@drawable/ic_menu_pref"/>
    <item android:id="@+id/menu_about" android:title="@string/menu_help" android:orderInCategory="114" app:showAsAction="never" android:icon="@drawable/ic_menu_help"/>
    <item android:id="@+id/menu_share_app" android:title="@string/menu_share_app" android:orderInCategory="115" app:showAsAction="never" android:icon="@drawable/ic_share_sharer"/>
</menu>